--- a/paper/Paper_1_v02.Rmd
+++ b/paper/Paper_1_v02.Rmd
@@ -20,13 +20,13 @@ To do.
 
 # Domestic energy consumption in a UK context 
 
-The UK continues to see domestic energy usage levels increase as an overall percentage of the countries consumption. In 2016, it accounted for 29% of overall usage - a decrease from previous years 35% in 2013 - but higher than the EU average which stood at 25.45% [@Eurostat]. These fluctuations are part of a larger upward trend overall, which has seen domestic energy consumption increase markedly from the 1970s by 12%, with short term fluctuations being accounted for by the effect of mean air temperature year on year [@Strategy].
+The UK continues to see domestic energy usage levels increase as an percentage of the countries overall consumption. In 2016, it accounted for 29% of overall usage - a decrease from previous years (35% in 2013) but higher than the EU average which stood at 25.45% [@Eurostat]. These fluctuations are part of a larger overall upward trend , which has seen domestic energy consumption increase markedly from the 1970s by 12%, with short term fluctuations being accounted for by the effect of mean air temperature year on year [@Strategy].
 
-Previous research has shown that a series of socio-demographic attributes influence the extent to which energy usage can be understood in the context of derpivation levels, including income, housing tenure and number of appliances. Indeed other research also covers factors such as dwelling characteristics and psychological and behavioural factors behind consumption patterns, which whilst important, are beyond the scope of this paper. Spatial variations have also previously been examined, but largely in reference to weather and temperature impacting upon consumption. 
+Previous research has shown that a series of socio-demographic attributes influence the extent to which energy usage can be understood in the context of derpivation levels, including income, housing tenure and number of appliances. Indeed other research also covers factors such as dwelling characteristics, psychological factors and behavioural factors behind consumption patterns which whilst important, are beyond the scope of this paper. Spatial variations have also previously been examined, but largely in reference to weather and temperature impacting upon consumption. 
 
-Primarily in response to concerns over reaching the targets laid out in the 2008 climate change act, central policy measures have been introduced to support and encourage reductions in energy usage, particularly in the domestic setting. Smart Meters are high on the UK government's energy efficiency agenda in order to align with those proposed targets. The UK government set goals of a 29% decrease in the domestic category [@HMGovernment2009] and for the transition to smart metering to be complete for both gas and electriciy by 2020 [@haben2016analysis]. With a top - down outlook, by upgrading the UK infrastructure to a 'Smart Grid' there is the potential for "solving a lot of our energy problems" [@smartgridcom; @Stern2011].Smart meters enable the smart grid by providing real-time data on the consumption of energy [@smartgridcom; @guerreiro2015making], therfore it will improve reliability, better match supply and demand and allow more efficient planning for both short and long term future; by being more secure, planning ahead for unexpected power outages and informing the number of power stations the UK is likely to need in the future. 
+Primarily in response to concerns over reaching the targets laid out in the 2008 climate change act, central policy measures have been introduced to support and encourage reductions in energy usage, particularly in the domestic setting. Smart Meters are high on the UK government's energy efficiency agenda in order to align with those proposed targets. The UK government set goals of a 29% decrease in the domestic category [@HMGovernment2009] and for the transition to smart metering to be complete for both gas and electriciy by 2020 [@haben2016analysis]. From a top down approach, by upgrading the UK infrastructure to a 'Smart Grid' there is the potential for "solving a lot of our energy problems" [@smartgridcom; @Stern2011].Smart meters enable the smart grid by providing real-time data on the consumption of energy [@smartgridcom; @guerreiro2015making], therfore it will improve reliability, better match supply and demand and allow more efficient planning for both short and long term future; by being more secure, planning ahead for unexpected power outages and informing the number of power stations the UK is likely to need in the future. 
 
-Given the establishment of these targets, there is an operational setting in which Domestic Energy Providers (DEPs) are under increasing pressure to ensure their customers are on the most efficient and affordable tariffs, driving a demand for smart meter installations and bringing an end to pre-paid meters and estimated bills, which are often far more expensive than actual bills, but are also the most likely tariffs to be held by those in or near fuel poverty. These personalised tariffs will enable the DEPs to offer access to cheap energy when demand is at its lowest.
+Given the establishment of these targets, there is an operational setting in which Domestic Energy Providers (DEPs) are under increasing pressure to ensure their customers are on the most efficient and affordable tariffs, driving a demand for smart meter installations and bringing an end to pre-paid meters and estimated bills, which are often far more expensive than actual bills, but are also the most likely tariffs to be held by those in or near fuel poverty [@DECC2017]. These personalised tariffs will enable the DEPs to offer access to cheap energy when demand is at its lowest.
 
 Energy meters have been an essential but modest element of the infrastructure in UK households since the early 20th century - firstly gas, and then with the invention of alternating current, electricity - both being produced on a large, saleable scale. By the turn of the century many improvements had been made to the original model inside peoples homes; reductions in weight and dimension and improving longterm stability. These induction meters are still widely produced today in their modern form, and are popular due to their low production price and excellent reliability. Yet for those reasons mentioned above, they are falling out of favour with policy makers, energy providers and consumers as they all look for a more efficient and affordable way to monitor energy consumption.  
 
@@ -54,6 +54,8 @@ On the international scale, the increased release of greenhouse gases into the a
 
 At the EU scale, the UK is one of the worst offenders for domestic energy consumption; the EU average was 25.4% of final energy consumption in 2016 [@Eurostat] whereas the UK sat at 29% in 2015. This could however, possibly be explained by the relative age of the UK housing stock in comparision to the rest of the EU, with many houses dating from the Victorian era. As a result, many houses are poorly insulated and ultimately consume more to maintain a given level of comfort [@Strategy]. The Euro 2020 energy strategy stipulates that all countries must aim to reduce greenhouse gas emissions by 20% and to make a 20% improvement in energy efficiency. The current strategy is unlikely to achieve these targets, but the report pin points smart meters and power grids as the key to full exploitation of the potential for energy savings [@eu2020].
 
+The 2008 Climate Change Act in the UK requires a 34% reduction in 1990 greenhouse gas emissions by 2020 and an 80% reduction by 2050. Dwellings are an important target area for reductions and the UK government set the goal of a 29% decrease in this area by 2020 [@HMGovernment2009]. As such, the installation of smart meter technologies that enable the collection of digital records of gas and electricity consumption are viewed as integral to encouraging greater efficiency through the measurement and monitoring of consumer behaviour alongside more efficiently producing and storing resources to meet the demand [@UKCCC2010; @guerreiro2015making; @smartgridcom]. 
+
 Increased demand in energy globally and continentally leads to a real price increase for domestic consumers in the UK. Despite there being a decrease in energy prices of 1.5% between 2013 and 2015, the average household spend on fuel has remained relatively static since 2013 at around £1240, but this does not account for inflation or stalling wage rises [@DECC2017]. As discussed, the UK has set targets in terms of a reduction in consumption and emissions, but has also commited to reducing the number of people who find themselves in fuel poverty because of these increased prices. Fuel poverty is a pertinent issue in the UK as the gap widens and people who have both a low income and high fuel costs find themselves deeper into fuel poverty as prices continue to rise well over and above rates of inflation. 
 
 # The representativeness of smart meter data 
@@ -64,23 +66,36 @@ TABLE 1
 
 It was imperative to understand the underlying characteristics of this innovative dataset as a whole [@lavin2016clustering]. Data was analysed before the aggregation took place to explore the spatiality of Smart Meter distribution and Figure 1 shows the penetration of smart meters as a percentage of total houses in each postcode sector. The North West and Midlands are the most prevalent area, while the Scottish Highlands are particularly sparse. This does suggest that there are some urban/rural variations in either the ease of installation or availability of the smart meter infrastructure into homes. Nowhere at the time of this data collection in the UK has higher than 16% of homes with a smart meter (whose energy is provided by this particular DEP). It is also relevant to consider the size and spread of this particular DEPs customer base; it may be the case that there are smart meters provied by other DEPs in areas which look sparse here. 
 
-FIGURE 1 - previously FIG 4. 
+
+```{r SM_PROP, echo=FALSE, fig.cap="Smart Meter Penetration in the UK", out.width = '100%'}
+knitr::include_graphics('SM_PROP.jpg')
+```
+
 
 It is also important to consider that the roll out of smart meters is still several years away from completion and there are no strict rules on the way these are distributed by the DEP. Currently they are given to those people who are at home when a representative calls at the house, which has an influence on the demographic of the people who are included in the data. To better understand this roll-out process and the spatial correlation within the dataset, a LISA (local indices of spatial correlation) was done, which determined that the penetration data was spatially correlated, as shown in Figure 2. There is an clear north south divide, and whilst any reasoning for this would be purely speculative, it is true to say that in the North of the UK, high penetration areas are much more likely to be surrounded by high penetration areas, whereas in the South of the UK the exact opposite is true, with the pattern being especially prominent along the southern coastlines. A global morans I statistics statistic had a positive value of 4.98, significant to 0.05, suggesting that these patterns have not occured randomly.
 
-FIGURE 2 - previously FIG 5 
+```{r LISA, echo=FALSE, fig.cap="Local Morans I", out.width = '100%'}
+knitr::include_graphics("Local_morans_I.jpg")
+```
 
 # Measuring energy usage of small areas
 
 The overall trend in the data showed that the number od smart meters increased incrementally over the 12 month period, with slightly more electricity smart meters overall than gas. Overall usage for the entire dataset at a diurnal granularity is presented in Figure 3, showing that as a whole, energy usage peaks during the evening at around 19:30 - when typically most members of the family are at home - therefore most appliances, heating and lighting are likely to be in use. It drops off very quickly after 9pm, most likely because as people go to bed for the night they make the most effort to turn off appliances and not use energy unnecessarily. This overnight rate is sometimes known as the ‘standby rate’ or ‘vampire power’ (Wyatt 2013).
 
-FIGURE 3 - previously FIG 1 
-
+```{r hourly, echo=FALSE, fig.cap="Hourly rates of Total Energy Consumption", out.width = '100%'}
+knitr::include_graphics("Hourly.jpg")
+```
 There is also a clear AM peak between 07:30 and 08:00, confirming that energy usage increases as people begin their daily tasks, but dips off again as people go out to work. The lowest energy usage occurs between the hours of 01:00 and 04:30, but does not go as low as zero because of the ‘standby’ rate of energy usage, where only those appliances which are not switched off such as the fridge freezer or central heating are consuming energy (Wyatt 2013). The fact that energy usage does not dip this low at any other time of the day indicates that in some cases energy is consumed throughout the day because people are at home through illness, unemployement, caring duties or shift work. 
 
 Figures 4 and 5 display energy usage at higher temporal granularities and shows both weekly and seasonal variations; lower energy usage during the typical working week and high usage at weekends when people tend to be at home, and very high usage in the winter months when heating requirements are much greater than in the summer. This is also likely to reflect shorter hours of darkness resulting in less lighting being used during the summer months, and other energy saving measures such as the ability to dry clothes outside in warmer weather.
 
-FIGURES 4 and 5 - previously figures 2 and 3
+```{r daily, echo=FALSE, fig.cap="Daily rates of Total Energy Consumption", out.width = '100%'}
+knitr::include_graphics("Daily.jpg")
+```
+
+```{r seasonal, echo=FALSE, fig.cap="Seasonal rates of Total Energy Consumption", out.width = '100%'}
+knitr::include_graphics("Seasonal.jpg")
+```
 
 # Calculating characteristics of energy users 
 
@@ -128,18 +143,13 @@ A townsend score - a measure of relative deprivation - is made up of four census
 
 The literature time and again refers to accomodation type as a major factor in energy consumption. This is because the type of accommodation a person lives is a good proxy for their usage habits; for example those who live alone will consume much less energy than a family with three children for a multitude of reasons; a large family are more likely to occupy a home with a larger floor space as their need is greater. They therefore have more rooms which require heating and lighting, and they will likely have a higher number of appliances, and or use these appliances such as the dishwsher or washing machine much more frequently than a single person living alone to achieve the same level of comfort [@Gatersleben2002, @Holloway2006, @Jones2015].
 
-It is also true to say that the UKs housing stock is currently much older than that in the rest of Europe. This goes some way to explaining the relative higher consumption but also at an individual level, post-war terrace houses are still extremely common, but are poorly insulated and in need of updating [@DECC2017]. Those families living in large detached and semi-detached houses are also more likely to be owner occupiers, and the DECC stated in their latest report that it is the disconnect between tenants and landlords that stands in the way of privately rented homes becoming more energy efficient, because it is unclear who should pay for and benefit from the efficiency measures. Private renters are the most likely to be in the deepest fuel poverty. 
+It is also true to say that the UKs housing stock is currently much older than that in the rest of Europe. This goes some way to explaining the relative higher consumption but also at an individual level, post-war terrace houses are still extremely common, but are poorly insulated and in need of updating [@DECC2017]. Those families living in large detached and semi-detached houses are also more likely to be owner occupiers, and the DECC stated in their latest report that it is the disconnect between tenants and landlords that stands in the way of privately rented homes becoming more energy efficient, because it is unclear who should pay for and benefit from the efficiency measures. Private renters are the most likely to be in the deepest fuel poverty [@DECC2017]. 
 
-Accommodation type is also indicative 
-
-The model ran attempts to explain the energy consumption by levels of deprivation. 
-
-The deprivation model ran here included the proportion of accomodation types in each PCS; detached, semi-detached, terrace, flat or shared accomodation. Due to the size of two of the groups, flats and shared accommodation were combined. As the largest category overall, semi-detached was used as the reference category. As can be seen in the OAC group pen profiles, deprivation and housing type are closely linke so it was important to control for it to avoid the Townsend score returning a significant result as it is being used as a proxy for type of accomodation.
+The model attempts to explain the energy consumption by levels of deprivation. It included the proportion of accomodation types in each PCS; detached, semi-detached, terrace, flat or shared accomodation. Due to the size of two of the groups, flats and shared accommodation were combined into one to make them more representative. As the largest category overall, semi-detached was used as the control category. As can be seen in the OAC group pen profiles, deprivation and housing type are closely linked so it was important to control for it to avoid the Townsend score returning a significant result as it is being used as a proxy for type of accomodation.
 
 A daily temporal profile was calculated showing total energy usage per day; these were combined with the PCS townsend scores and accomodation types and a linear regression model ran.The energy consumption model explained R^2^ = 15.54% (adjusted R2 = 15.49%) of the variability in domestic energy consumption, p < 2.2e-16, suggesting that these results have not occured randomly.
 
 A detached and typically larger house than the reference category (semi-detached) would use on average an extra 1953.2 kW per day in comparison, whereas a smaller terrace house would use less to the sum of 135.5 kW per day. Detached houses typically have a greater number of rooms and lower levels of overcrowding, therefore more rooms need heating and lighting (which account for 60% of average consumption [@Strategy]). This model also suggests that as Townsend scores increase, energy usage decreases overall, which as a measure of deprivation is to be expected – the higher the level of deprivation the less likely people are to be able to afford to be wasteful and consume unnecessary energy. They are also likely to live in smaller houses with lower heating and lighting requirement, own and use fewer appliances and have smaller families.
-
 
 # Conclusions and future work. 
 
